--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,7 @@
 
 @layer components{
   .btn {
-    @apply flex gap-2 items-center gap-2 rounded-md py-2 px-4 text-white;
+    @apply flex gap-2 items-center gap-2 rounded-md py-2 px-4 text-white disabled:cursor-not-allowed disabled:bg-gray-400 disabled:hover:bg-gray-400;
   }
 
   .input {
@@ -33,7 +33,7 @@
 
 @layer utilities {
   .btn-red {
-    @apply bg-rose-900 hover:bg-rose-800 p-2; 
+    @apply bg-rose-900 hover:bg-rose-800; 
   }
 
   .btn-green {
